@@ -1,7 +1,9 @@
 `plot.renyiaccum` <-
-function (x, what=c("mean", "Qnt 0.025", "Qnt 0.975"), type = "l", ...) 
+function (x, what=c("Collector", "mean", "Qnt 0.025", "Qnt 0.975"),
+          type = "l", ...) 
 {
-	if (any(what %in% colnames(x[,1,])))
+        what <- what[what %in% dimnames(x)[[3]]]
+	if (any(what %in% dimnames(x)[[3]]))
 	    x <- x[,,what, drop = FALSE]
 	dm <- dim(x)
         dnam <- dimnames(x)
